# mm-schema

./: .gitignore  Cargo.toml  README.md  aapl_purchase.sql  add_entry.sql  credit_card_balance.sql  credit_card_purchase.sql  finances.db  flake.nix  init.sh  init.sql  salary_received.sql  schema.sql
.direnv/: flake-profile-1-link  flake-profile-2-link
.github/workflows/: nix.yaml
src/: db.rs  error.rs  interface.rs  main.rs  models.rs  money.rs  seeding.rs  tests.rs  types.rs
src/db/: mod.rs  seeding.rs  tests.rs
src/sql/: general_balance.sql  insert_journal_entry.sql  insert_journal_entry_lines.sql  insert_transaction.sql  schema.sql
