[package]
name = "mm-schema"
version = "0.0.0"
edition = "2021"
license = "MIT"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled", "chrono", "i128_blob"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.30"
serde = { version = "1.0", features = ["derive"] }
rust_decimal_macros = "1.36.0"
